# file-remark

./: .gitignore  README.md  setup.cfg
src/file_remark/: __main__.py  config.py  main.py  my_db.py  tools.py  user_exception.py
src/file_remark/data/: help.info  my_db.db.bak
src/file_remark/module/: m_files.py
src/file_remark/sql/: config.sql  config_data.sql  files.sql  v3.sql
tests/: test.py
