[metadata]
name = file-remark-icexmoon
version = 0.0.1
author = icexmoon
author_email = icexmoon@qq.com
description = Add a remark for the file in the OS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icexmoon/file-remark
project_urls =
    Bug Tracker = https://github.com/icexmoon/file-remark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.package_data]
* = *.info

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyfr = file_remark.__main__:main